Projet_fil_rouge2/infra/k8s/client_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-srv
  template:
    metadata:
      labels:
        app: client-srv
    spec:
      containers:
        - name: cient-srv
          image: tp-cient3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
