Projet_fil_rouge2/infra/k8s/comments_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-srv
  labels:
    app: comments-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-srv
  template:
    metadata:
      name: comments-srv
      labels:
        app: comments-srv
    spec:
      containers:
        - name: tp-comments-container
          image: tp-comments3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
