Projet_fil_rouge2/infra/k8s/post_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-clusterip-srv
  labels:
    app: posts-clusterip-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-clusterip-srv
  template:
    metadata:
      name: posts-clusterip-srv
      labels:
        app: posts-clusterip-srv
    spec:
      containers:
        - name: posts-clusterip-srv-container
          image: tp-posts4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
