Projet_fil_rouge2/infra/k8s/query_delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query-srv
  template:
    metadata:
      labels:
        app: query-srv
    spec:
      containers:
        - name: querycontainer
          image: tp-query3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
