Projet_fil_rouge2/infra/k8s/post-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort
  selector:
    app: posts-clusterip-srv
  ports:
    - protocol: TCP
      port: 4000
